zetasql/parser/testdata/define_table.test
define table t1 (a=1,b="a",c=1.4,d=true)
--
DefineTableStatement [0-40] [define table....4,d=true)]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-40] [(a=1,b="a",c=1.4,d=true)]
    OptionsEntry [17-20] [a=1]
      Identifier(a) [17-18] [a]
      IntLiteral(1) [19-20] [1]
    OptionsEntry [21-26] [b="a"]
      Identifier(b) [21-22] [b]
      StringLiteral("a") [23-26] ["a"]
    OptionsEntry [27-32] [c=1.4]
      Identifier(c) [27-28] [c]
      FloatLiteral(1.4) [29-32] [1.4]
    OptionsEntry [33-39] [d=true]
      Identifier(d) [33-34] [d]
      BooleanLiteral(true) [35-39] [true]
--
DEFINE TABLE t1(a = 1, b = "a", c = 1.4, d = true)
==

define table a.`b`.`c 2` (x='''
foo''',y="2011-10-22",z=@param,zz=@@sysvar)
--
DefineTableStatement [0-75] [define table...=@@sysvar)]
  PathExpression [13-24] [a.`b`.`c 2`]
    Identifier(a) [13-14] [a]
    Identifier(b) [15-18] [`b`]
    Identifier(`c 2`) [19-24] [`c 2`]
  OptionsList [25-75] [(x=''' foo...=@@sysvar)]
    OptionsEntry [26-38] [x=''' foo''']
      Identifier(x) [26-27] [x]
      StringLiteral('''
foo''') [28-38] [''' foo''']
    OptionsEntry [39-53] [y="2011-10-22"]
      Identifier(y) [39-40] [y]
      StringLiteral("2011-10-22") [41-53] ["2011-10-22"]
    OptionsEntry [54-62] [z=@param]
      Identifier(z) [54-55] [z]
      ParameterExpr [56-62] [@param]
        Identifier(param) [57-62] [param]
    OptionsEntry [63-74] [zz=@@sysvar]
      Identifier(zz) [63-65] [zz]
      SystemVariableExpr [66-74] [@@sysvar]
        PathExpression [68-74] [sysvar]
          Identifier(sysvar) [68-74] [sysvar]
--
DEFINE TABLE a.b.`c 2`(x = '''
foo''', y = "2011-10-22", z = @param, zz = @@sysvar)
==

define table t1 (a=b)
--
DefineTableStatement [0-21] [define table t1 (a=b)]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-21] [(a=b)]
    OptionsEntry [17-20] [a=b]
      Identifier(a) [17-18] [a]
      PathExpression [19-20] [b]
        Identifier(b) [19-20] [b]
--
DEFINE TABLE t1(a = b)
==

define table t1 ()
--
DefineTableStatement [0-18] [define table t1 ()]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-18] [()]
--
DEFINE TABLE t1()
==

define table t1 (a=b+1)
--
DefineTableStatement [0-23] [define table t1 (a=b+1)]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-23] [(a=b+1)]
    OptionsEntry [17-22] [a=b+1]
      Identifier(a) [17-18] [a]
      BinaryExpression(+) [19-22] [b+1]
        PathExpression [19-20] [b]
          Identifier(b) [19-20] [b]
        IntLiteral(1) [21-22] [1]
--
DEFINE TABLE t1(a = b + 1)
==

define table t1 (x=y.z)
--
DefineTableStatement [0-23] [define table t1 (x=y.z)]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-23] [(x=y.z)]
    OptionsEntry [17-22] [x=y.z]
      Identifier(x) [17-18] [x]
      PathExpression [19-22] [y.z]
        Identifier(y) [19-20] [y]
        Identifier(z) [21-22] [z]
--
DEFINE TABLE t1(x = y.z)
==

define table x.all(a=1)
--
DefineTableStatement [0-23] [define table x.all(a=1)]
  PathExpression [13-18] [x.all]
    Identifier(x) [13-14] [x]
    Identifier(`all`) [15-18] [all]
  OptionsList [18-23] [(a=1)]
    OptionsEntry [19-22] [a=1]
      Identifier(a) [19-20] [a]
      IntLiteral(1) [21-22] [1]
--
DEFINE TABLE x.`all`(a = 1)
==

define table t1 (x.y=5)
--
ERROR: Syntax error: Expected "=" but got "." [at 1:19]
define table t1 (x.y=5)
                  ^
==

define table t1
--
ERROR: Syntax error: Expected "(" or "." but got end of statement [at 1:16]
define table t1
               ^
==

define table t1 (x,y,z)
--
ERROR: Syntax error: Expected "=" but got "," [at 1:19]
define table t1 (x,y,z)
                  ^
==

define table t1 OPTIONS (x,y,z)
--
ERROR: Syntax error: Expected "(" or "." but got keyword OPTIONS [at 1:17]
define table t1 OPTIONS (x,y,z)
                ^
==

define table t1 (a=CAST(1 AS INT32))
--
DefineTableStatement [0-36] [define table...AS INT32))]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-36] [(a=CAST(1 AS INT32))]
    OptionsEntry [17-35] [a=CAST(1 AS INT32)]
      Identifier(a) [17-18] [a]
      CastExpression [19-35] [CAST(1 AS INT32)]
        IntLiteral(1) [24-25] [1]
        SimpleType [29-34] [INT32]
          PathExpression [29-34] [INT32]
            Identifier(INT32) [29-34] [INT32]
--
DEFINE TABLE t1(a = CAST(1 AS INT32))
==

define table t1 (PROTO="PROTO<foo>",hash="HASH")
--
DefineTableStatement [0-48] [define table...hash="HASH")]
  PathExpression [13-15] [t1]
    Identifier(t1) [13-15] [t1]
  OptionsList [16-48] [(PROTO="PROTO...hash="HASH")]
    OptionsEntry [17-35] [PROTO="PROTO<foo>"]
      Identifier(`PROTO`) [17-22] [PROTO]
      StringLiteral("PROTO<foo>") [23-35] ["PROTO<foo>"]
    OptionsEntry [36-47] [hash="HASH"]
      Identifier(`hash`) [36-40] [hash]
      StringLiteral("HASH") [41-47] ["HASH"]
--
DEFINE TABLE t1(`PROTO` = "PROTO<foo>", `hash` = "HASH")
==

define table t1 (ARRAY="a")
--
ERROR: Syntax error: Unexpected keyword ARRAY [at 1:18]
define table t1 (ARRAY="a")
                 ^
